--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "gulp": "^5.0.0",
+    "gulp-svg-sprite": "^2.0.3",
     "prettier": "^3.5.3",
     "sass-embedded": "^1.83.4"
   }
