--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
     "semi": true,
     "singleQuote": false,
-    "tabWidth": 4,
-    "useTabs": false,
-    "trailingComma": "es5",
-    "printWidth": 80,
     "bracketSpacing": true,
-    "arrowParens": "always"
+    "tabWidth": 4,
+    "trailingComma": "all",
+    "useTabs": false,
+    "printWidth": 80,
+    "arrowParens": "always",
+    "endOfLine": "auto"
 }
