--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-vue": "^10.0.0",
+    "globals": "^16.0.0",
     "gulp": "^5.0.0",
     "gulp-svg-sprite": "^2.0.3",
     "prettier": "^3.5.3",
