--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^3.15.4",
     "pinia": "^2.3.1",
     "si-check": "^1.0.1",
+    "swiper": "^11.2.6",
     "vue": "latest",
     "vue-router": "latest"
   },
