--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^9.1.5",
     "@pinia/nuxt": "^0.9.0",
+    "@vee-validate/zod": "^4.15.0",
     "@vueuse/nuxt": "^12.5.0",
     "gsap": "^3.12.7",
+    "maska": "^3.1.1",
     "nuxt": "^3.15.4",
     "pinia": "^2.3.1",
     "si-check": "^1.0.1",
     "swiper": "^11.2.6",
+    "vee-validate": "^4.15.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
